fix heading overflowing

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -19,6 +19,7 @@
       justify-content: space-between;
       flex-direction: column;
       padding: 0;
+      overflow: auto;
 
       .attribute-container {
         .attribute-item {
@@ -146,7 +147,7 @@
   .project-preview-details-container {
     flex-basis: 40%;
     order: 1;
-    padding-right: 20px;
+    padding-right: 1vw;
     text-align: right;
 
     .project-preview-details-service {
@@ -189,10 +190,12 @@
       .header-container {
         flex-basis: 30%;
         order: 1;
-        padding-right: 6vw;
+        padding-right: 3vw;
 
         .heading-title {
           font-size: 4vw;
+          word-wrap: break-word;
+          line-height: 8vh;
         }
       }
 
@@ -200,10 +203,10 @@
         height: 18vw;
 
         .project-preview-details-container {
-          flex-basis: 25%;
+          flex-basis: 30%;
         }
         .project-preview-image-container {
-          flex-basis: 75%;
+          flex-basis: 70%;
         }
       }
 
@@ -273,17 +276,17 @@
   }
 }
 
-.heading-container::after {
-  content: "";
-  display: block;
-  width: 90%;
-  height: 3px;
-  background-color: $secondary-color;
-  position: absolute;
-  right: 0;
-  top: 50%;
-  z-index: -2;
-}
+// .heading-container::after {
+//   content: "";
+//   display: block;
+//   width: 90%;
+//   height: 3px;
+//   background-color: $secondary-color;
+//   position: absolute;
+//   right: 0;
+//   top: 50%;
+//   z-index: -2;
+// }
 
 .heading-container {
   position: relative;
